--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -94,6 +94,7 @@ ROBOPTIM_CORE_TEST(cached-function)
 ROBOPTIM_CORE_TEST(split)
 
 ROBOPTIM_CORE_TEST(plus)
+ROBOPTIM_CORE_TEST(filter-chain)
 
 # Visualization
 ROBOPTIM_CORE_TEST(visualization-gnuplot-simple)
