--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -94,8 +94,10 @@ ROBOPTIM_CORE_TEST(cached-function)
 ROBOPTIM_CORE_TEST(split)
 
 ROBOPTIM_CORE_TEST(plus)
-ROBOPTIM_CORE_TEST(filter-minus)
 ROBOPTIM_CORE_TEST(filter-chain)
+ROBOPTIM_CORE_TEST(filter-minus)
+ROBOPTIM_CORE_TEST(filter-product)
+ROBOPTIM_CORE_TEST(filter-scalar)
 ROBOPTIM_CORE_TEST(filter-selection)
 
 # Visualization
