--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
   - git submodule update --init --recursive
   - sudo apt-get update -qq
   - sudo apt-get install -qq doxygen doxygen-latex libltdl-dev libboost-all-dev liblog4cxx10-dev libeigen3-dev
+  - sudo pip install cpp-coveralls --use-mirrors
+after_success:
+  - if test x$CC = xgcc; then coveralls --exclude lib --exclude tests; fi
 notifications:
   email:
     - roboptim@googlegroups.com
