Tests use liblog4cxx

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ MACRO(ROBOPTIM_CORE_TEST NAME)
 
   TARGET_LINK_LIBRARIES(${NAME} roboptim-core)
   PKG_CONFIG_USE_DEPENDENCY(${NAME} eigen3)
+  PKG_CONFIG_USE_DEPENDENCY(${NAME} liblog4cxx)
 
   # Link against Boost.
   TARGET_LINK_LIBRARIES(${NAME} ${Boost_LIBRARIES})
