--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 after_success:
   - coveralls -e _travis/install -e _travis/build/eigen-eigen-ffa86ffb5570/ -e tests
   - git remote set-url origin https://${GH_TOKEN}@github.com/roboptim/roboptim-core.git
+  - git fetch origin
   - cd _travis/build/doc && ../../../cmake/github/update-doxygen-doc.sh
 notifications:
   email:
