--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
   - sudo pip install cpp-coveralls --use-mirrors
 after_success:
   - coveralls -e _travis/install -e _travis/build/eigen-eigen-ffa86ffb5570/ -e tests
-  - git remote set-url origin https://${GH_TOKEN}@github.com/roboptim/roboptim-core.git
+  - git config --global user.name "Travis CI"
+  - git config --global user.email "thomas.moulard+travis@gmail.com"
+  - git remote set-url origin https://thomas-moulard:${GH_TOKEN}@github.com/roboptim/roboptim-core.git
   - git fetch origin gh-pages:gh-pages
   - cd _travis/build/doc && ../../../cmake/github/update-doxygen-doc.sh
 notifications:
