--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,17 @@ language: cpp
 compiler:
   - clang
   - gcc
-script: "./.travis.build.sh"
-before_install:
-  - git submodule update --init --recursive
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq doxygen doxygen-latex libltdl-dev libboost-all-dev liblog4cxx10-dev libeigen3-dev
-  - sudo pip install cpp-coveralls --use-mirrors
-after_success:
-  - coveralls -e _travis/install -e _travis/build/eigen-eigen-ffa86ffb5570/ -e tests
-  - git config --global user.name "Travis CI"
-  - git config --global user.email "thomas.moulard+travis@gmail.com"
-  - git remote set-url origin https://thomas-moulard:${GH_TOKEN}@github.com/roboptim/roboptim-core.git
-  - git fetch origin gh-pages:gh-pages
-  - cd _travis/build/doc && ../../../cmake/github/update-doxygen-doc.sh
+script: "./.travis/build"
+before_install: "./.travis/before_install"
+after_success: "./.travis/after_success"
+after_failure: "./.travis/after_failure"
 notifications:
   email:
     - roboptim@googlegroups.com
 branches:
   only:
     - master
+    - debian
 matrix:
   allow_failures:
     - compiler: clang
