[travis] Make sure Travis install Eigen 3.2.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,9 @@ branches:
 script: ./.travis/run build
 after_success: ./.travis/run after_success
 after_failure: ./.travis/run after_failure
-before_install: ./.travis/run  before_install
+before_install:
+  - ./.travis/run  before_install
+  - ./.travis/dependencies/eigen-3.2.0
 matrix:
   allow_failures:
     - compiler: clang
