[travis] Make sure that NAG is found

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ before_install:
 - ./.travis/dependencies/eigen-3.2.0
 - ./.travis/dependencies/nag
 - ./.travis/run  before_install
-script: ./.travis/run build
+script:
+- . .travis/common.sh && export NAG_DIR=$install_dir/NAG/cll6a23dhl
+- ./.travis/run build
 after_failure: ./.travis/run after_failure
 after_success: ./.travis/run after_success
 branches:
