Make sure plugins in the build directory are used.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,6 +50,14 @@ MACRO(ROBOPTIM_CORE_TEST NAME)
 
   # Link against Boost.
   TARGET_LINK_LIBRARIES(${NAME} ${Boost_LIBRARIES})
+
+  # Make sure the plugins will be found.
+  SET_PROPERTY(
+    TEST ${NAME} PROPERTY ENVIRONMENT
+    "LTDL_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LTDL_LIBRARY_PATH}")
+  SET_PROPERTY(
+    TEST ${NAME} PROPERTY ENVIRONMENT
+    "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LD_LIBRARY_PATH}")
 ENDMACRO(ROBOPTIM_CORE_TEST)
 
 
