Display NAG_DIR during cmake invocation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ ADD_REQUIRED_DEPENDENCY("roboptim-core >= 0.5")
 
 # Look for NAG.
 FIND_PATH(NAG_DIR include/nag.h HINTS /opt/NAG/cll6a23dhl/)
+MESSAGE(STATUS "NAG_DIR: " ${NAG_DIR})
 
 INCLUDE_DIRECTORIES("${NAG_DIR}/include")
 LINK_DIRECTORIES("${NAG_DIR}/lib")
