--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,7 +24,8 @@ MACRO(NAG_PLUGIN NAME)
     INSTALL_RPATH "${NAG_DIR}/lib"
     )
 
-  INSTALL(TARGETS roboptim-core-plugin-${NAME} DESTINATION ${ROBOPTIM_CORE_PLUGINDIR})
+  INSTALL(TARGETS roboptim-core-plugin-${NAME}
+    DESTINATION ${ROBOPTIM_CORE_PLUGINDIR})
 ENDMACRO()
 
 NAG_PLUGIN(nag)
