Add logger class defining a perIteration callback (close #28).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-linear-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-quadratic-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/numeric-quadratic-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/optimization-logger.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/parametrized-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/plugin/dummy-laststate.hh
@@ -119,6 +120,8 @@ SET(PKG_CONFIG_EXTRA "plugindir=${CMAKE_INSTALL_FULL_LIBDIR}/roboptim-core")
 PKG_CONFIG_APPEND_LIBS(roboptim-core)
 
 # Search for dependencies.
+SET(BOOST_COMPONENTS
+  date_time filesystem system thread program_options unit_test_framework)
 SEARCH_FOR_BOOST()
 ADD_REQUIRED_DEPENDENCY("eigen3 >= 3.2.0")
 ADD_REQUIRED_DEPENDENCY("liblog4cxx >= 0.10.0")
