Use LinearFunction instead of NumericLinearFunction in interface (fix #3)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,7 +49,7 @@ SET(SOLVER_NAME "nag-nlp")
 SET(FUNCTION_TYPE ::roboptim::EigenMatrixDense)
 SET(PROGRAM_SUFFIX "-nlp")
 SET(COST_FUNCTION_TYPE ::roboptim::GenericDifferentiableFunction)
-SET(CONSTRAINT_TYPE_1 ::roboptim::GenericNumericLinearFunction)
+SET(CONSTRAINT_TYPE_1 ::roboptim::GenericLinearFunction)
 SET(CONSTRAINT_TYPE_2 ::roboptim::GenericDifferentiableFunction)
 INCLUDE(shared-tests/CMakeLists.txt)
 
@@ -57,6 +57,6 @@ SET(SOLVER_NAME "nag-nlp-sparse")
 SET(FUNCTION_TYPE ::roboptim::EigenMatrixSparse)
 SET(PROGRAM_SUFFIX "-nlp-sparse")
 SET(COST_FUNCTION_TYPE ::roboptim::GenericDifferentiableFunction)
-SET(CONSTRAINT_TYPE_1 ::roboptim::GenericNumericLinearFunction)
+SET(CONSTRAINT_TYPE_1 ::roboptim::GenericLinearFunction)
 SET(CONSTRAINT_TYPE_2 ::roboptim::GenericDifferentiableFunction)
 INCLUDE(shared-tests/CMakeLists.txt)
