--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -114,6 +114,7 @@ ROBOPTIM_CORE_TEST(filter-plus)
 ROBOPTIM_CORE_TEST(filter-product)
 ROBOPTIM_CORE_TEST(filter-scalar)
 ROBOPTIM_CORE_TEST(filter-selection)
+ROBOPTIM_CORE_TEST(filter-selection-by-id)
 
 # Visualization
 ROBOPTIM_CORE_TEST(visualization-gnuplot-simple)
