--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/detail/autopromote.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/differentiable-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/differentiable-function.hxx
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/bind.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/bind.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/cached-function.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/cached-function.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/filter/chain.hh
