--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,7 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-state.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/solver-state.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/sum-of-c1-squares.hh
+  ${CMAKE_SOURCE_DIR}/include/roboptim/core/sum-of-c1-squares.hxx
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/sys.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/terminal-color.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/twice-derivable-function.hh
