Add initial support for 32-bits MKL compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,15 @@ ADD_REQUIRED_DEPENDENCY("roboptim-core >= 0.5")
 MESSAGE(STATUS "ROBOPTIM_CORE_PLUGINDIR: " ${ROBOPTIM_CORE_PLUGINDIR})
 
 # Look for NAG.
-FIND_PATH(NAG_DIR include/nag.h HINTS /opt/NAG/cll6a23dhl/)
+FIND_PATH(NAG_DIR include/nag.h HINTS /opt/NAG/cllux23dhl/)
 MESSAGE(STATUS "NAG_DIR: " ${NAG_DIR})
 
 INCLUDE_DIRECTORIES("${NAG_DIR}/include")
 LINK_DIRECTORIES("${NAG_DIR}/lib")
+LINK_DIRECTORIES("${NAG_DIR}/rtl")
+# MKL
+LINK_DIRECTORIES("${NAG_DIR}/mkl")
+LINK_DIRECTORIES("/opt/intel/mkl/lib/ia32")
 
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(tests)
