--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,7 @@ CXXFLAGS+=-fvisibility=hidden
 	override_dh_makeshlibs
 
 %:
-	dh  $@ --parallel --with pkgkde-symbolshelper
+	dh  $@ --parallel
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
