Set ROBOPTIM_DO_NOT_CHECK_ALLOCATION as a cache variable and forward to pc file
  If this variable is defined at compilation, it has to be defined at
  compilation of dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,13 @@ SET(HEADERS
 
 SETUP_PROJECT()
 
+SET (ROBOPTIM_DO_NOT_CHECK_ALLOCATION TRUE CACHE BOOL
+  "Do not check dynamic allocation of Eigen matrices")
+IF(ROBOPTIM_DO_NOT_CHECK_ALLOCATION)
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_DO_NOT_CHECK_ALLOCATION")
+  PKG_CONFIG_APPEND_CFLAGS (-DROBOPTIM_DO_NOT_CHECK_ALLOCATION)
+ENDIF()
+
 # If compiler support symbol visibility, enable it.
 INCLUDE(CheckCCompilerFlag)
 CHECK_C_COMPILER_FLAG(-fvisibility=hidden HAS_VISIBILITY)
