Provide a way to disable tests.
Cf. jrl-umi3218/jrl-cmakemodules#44

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,8 +162,16 @@ PKG_CONFIG_APPEND_LIBS(ltdl)
 PKG_CONFIG_APPEND_CFLAGS (-DEIGEN_RUNTIME_NO_MALLOC)
 HEADER_INSTALL("${HEADERS}")
 
+OPTION(DISABLE_TESTS "Disable test programs" OFF)
+
 ADD_SUBDIRECTORY(src)
-ADD_SUBDIRECTORY(tests)
+
+IF(NOT DISABLE_TESTS)
+  ADD_SUBDIRECTORY(tests)
+ELSE()
+  MESSAGE(WARNING
+    "Tests should only be disabled for speficic cases. Do it at your own risk.")
+ENDIF()
 
 SETUP_PROJECT_FINALIZE()
 SETUP_PROJECT_CPACK()
