problem.hh: improve code coverage.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -79,6 +79,7 @@ ROBOPTIM_CORE_TEST(derivable-function)
 ROBOPTIM_CORE_TEST(twice-derivable-function)
 ROBOPTIM_CORE_TEST(quadratic-function)
 ROBOPTIM_CORE_TEST(linear-function)
+ROBOPTIM_CORE_TEST(problem)
 ROBOPTIM_CORE_TEST(problem-cc)
 ROBOPTIM_CORE_TEST(numeric-linear-function)
 ROBOPTIM_CORE_TEST(numeric-quadratic-function)
